# sps-v2

./: .env.example  .gitignore  PACKAGE-MANIFEST.json  README-DEV.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.gsd/: DECISIONS.md  PROJECT.md  QUEUE.md  REQUIREMENTS.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
alembic/: env.py
gsd/: 01-phase0_bootstrap.md
scripts/: bootstrap_dev.sh  generate_release_bundle.py  run_confidence_checks.sh  seed_reviewer_demo.py  start_temporal_dev.sh  stop_temporal_dev.sh  verify_m002_s03_runbook.sh  verify_m003_s01.sh  verify_m003_s03.sh  verify_m003_s04.sh  verify_m004_s01.sh  verify_m004_s02.sh  verify_m004_s03.sh  verify_m005_s03.sh  verify_m006_s02.sh  verify_m007_s03.sh  verify_m008_s02.sh  verify_m009_s02.sh  verify_m009_s03.sh  verify_m010_s03.sh  verify_m011_s02.sh  verify_m012_s01.sh  verify_m013_s02.sh
source/: Implementation SPS v2.0.1.docx
sps_full_spec_package/: PACKAGE-MANIFEST.json  README.md
tests/: __init__.py  conftest.py  m002_s01_temporal_permit_case_workflow_test.py  m002_s02_temporal_guarded_transition_workflow_test.py  m002_s02_transition_guard_db_idempotency_test.py  m002_s03_temporal_activity_retry_idempotency_test.py  m002_s03_temporal_replay_determinism_test.py  m002_s04_workflow_cli_test.py  m003_s01_reviewer_api_boundary_test.py  m003_s02_reviewer_independence_test.py  m003_s03_contradiction_blocking_test.py  m003_s04_dissent_artifacts_test.py  m004_s01_intake_api_workflow_test.py  m004_s02_jurisdiction_requirements_workflow_test.py  m009_s01_dashboard_test.py  (+41 more)
(+600 files in other folders)
