[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "sps"
version = "0.0.0"
description = "Solar Permitting System (SPS) — implementation scaffold for SPS v2.0.1 canonical spec package"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "SPS Team" }]

dependencies = [
  "pyyaml>=6.0",

  # API runtime
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",

  # Typed config + validation
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",

  # Postgres persistence + migrations
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "check-jsonschema>=0.30.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sps"]

[tool.ruff]
line-length = 100
